# snapshot-pepester

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GEMINI.md  README.md  mkdocs.yml  mypy.ini  pyproject.toml  rolesnap.json  ta_roles_example.yaml  ta_snapshot.py
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: changelog.md  cli.md  config.md  examples.md  faq.md  how-it-works.md  index.md  install.md  quickstart.md  recipes.md  roadmap.md
snapshot_utils/: constants.py  engine.py
src/: cli.py  constants.py  paths.py  selfscan.py  yaml_loader.py
src/rolesnap/: cli.py
src/snapshot_utils/: constants.py  yaml_loader.py
